# grafikaSP

./: Cargo.toml
src/: app.rs  egui_tools.rs  main.rs  pipeline.rs  shader.wgsl  state.rs
src/objects/: face.rs  mod.rs  model.rs  model_group.rs  scene.rs  vertex.rs
src/shapes/: pentagon.rs
