[package]
name = "grafika-sp"
version = "1.0.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.24", features = ["derive"] }
egui = "0.33.3"
egui-wgpu = { version = "0.33.3", features = ["winit"] }
egui-winit = "0.33.3"
winit = "0.30.12"
pollster = "0.4.0"
image = {version="0.25.10", default-features=false, features=["png", "jpeg"]}